# magnetic_edge_gnn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  train.py
.github/workflows/: python-package.yml
data/: README.md
data/traffic-anaheim/: anaheim_nodes.geojson
eign/: __init__.py  experiment.py  laplacian.py  train.py
eign/block/: __init__.py  block.py  laplacian_conv_block.py  laplacian_conv_with_node_transformation_block.py
eign/conv/: __init__.py  fusion.py  laplacian.py  laplacian_with_node_transformation.py  residual.py
eign/datasets/: __init__.py  data_module.py
eign/eign/: __init__.py  eign.py  laplacian_conv_eign.py  laplacian_conv_with_node_transformation_eign.py
eign/logging/: wandb.py
eign/models/: mlp_with_fusion.py
examples/: eign_example.ipynb  laplacians_and_convolution.ipynb
experiments/: ablation.yaml  all_interpolation_10_best.yaml  all_interpolation_10_hpo.yaml  electrical_circuits_best_hp.yaml  electrical_circuits_denoising_hpo.yaml  electrical_circuits_interpolation_hpo.yaml  electrical_circuits_q.yaml  electrical_circuits_simulation_hpo.yaml  electrical_circuits_v2_hpo.yaml  electrical_circuits_with_source_voltage_hpo.yaml  electrical_circuits_with_std_scaling.yaml  mixed_longest_cycle_identification_hpo.yaml  phase_shift_ablation_random_walk_denoising.yaml  random_walk_denoising_hpo.yaml  rebuttal_cheb.yaml  rebuttal_electrical_circuits_baseliens_80_hidden_size.yaml  rebuttal_electrical_circuits_simulation_ours_hp_study.yaml  rebuttal_gcn_like.yaml  rebuttal_rossi_gnn.yaml  rebuttal_transformer.yaml  synthetic_best_hpo.yaml  traffic_flow_anaheim_best_hpo.yaml  traffic_flow_barcelona_best_hpo.yaml  traffic_flow_chicago_best_hpo.yaml  traffic_flow_denoising_best_hp.yaml  traffic_flow_denoising_hpo.yaml  traffic_flow_interpolation_best_hp.yaml  traffic_flow_interpolation_hpo.yaml  traffic_flow_simulation_best_hp.yaml  traffic_flow_simulation_hpo.yaml  traffic_flow_winnipeg_best_hpo.yaml  typed_triangles_orientation_hpo.yaml
hyperparameters/: electrical_circuits.yaml  mixed_longest_cycle_identification.yaml  random_walk_denoising.yaml  traffic_flow_denoising.yaml  traffic_flow_interpolation.yaml  traffic_flow_simulation.yaml  typed_triangles_orientation.yaml
magnetic_edge_gnn/: registry.py  util.py
test/: test.py
(+258 files in other folders)
