[build-system]
requires = ["setuptools>=61", "wheel", "numpy", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetic_edge_gnn"
dynamic = ["version"]
authors = [
    { name = "Dominik Fuchsgruber", email = "d.fuchsgruber@tum.de" },
    { name = "Tim Postuvan", email = "tim.postuvan@epfl.ch" },
]
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # PyTorch etc.
    "torchmetrics",
    "torchvision",
    "einops",
    "typeguard <= 2.13.3", # we can not afford any more recent version, as it clashes with jaxtyped...
    "jaxtyping",
    "torch_geometric",
    "omegaconf",
    "pytorch-lightning",
    "tabulate",

    # General science & ml
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",

    # Plotting & visualization
    "matplotlib",
    "seaborn",

    # wandb
    "wandb >= 0.13",

    # Utilities
    "tqdm",
    "rich",
    "ipython",
    "ipdb",
    "jupyterlab",
    "ipympl",
    "dacite",

    "geopandas",
    "verstack",
    "tinydb",

    # appropriate seml version
    "seml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]


[tool.isort]
profile = "black"
known_third_party = ["wandb"]

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.ruff.lint]
ignore = ['F722', 'F821']

[tool.ruff.lint.per-file-ignores]

[tool.setuptools]
packages = ["magnetic_edge_gnn"]
